Add first three pages (working)

--- a/policyengine-client/example/package.json
+++ b/policyengine-client/example/package.json
@@ -10,14 +10,7 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
-    "antd": "^4.16.13",
-    "policyengine-client": "file:..",
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
+    "policyengine-client": "file:.."
   },
   "eslintConfig": {
     "extends": "react-app"
