--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "policyengine-client",
   "version": "1.0.0",
-  "description": "Client modules for PolicyEngine",
+  "description": "Made with create-react-library",
   "author": "nikhilwoodruff",
   "license": "MIT",
   "repository": "policyengine/policyengine-core",
@@ -27,10 +27,9 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
-    "eslint": "^7.11.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
@@ -41,38 +40,29 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.15.6",
-    "bootstrap": "^4.6.0",
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.2",
+    "antd": "^4.16.13",
+    "bootstrap": "^5.1.1",
     "framer-motion": "^4.1.17",
-    "ga-4-react": "^0.1.281",
-    "grommet": "^2.17.2",
-    "js-yaml-loader": "^1.2.2",
-    "plotly.js": "^1.58.4",
-    "polished": "^4.1.2",
+    "plotly.js": "^2.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.0",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^5.2.0",
-    "react-router-ga": "^1.2.3",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.3.0",
     "react-share": "^4.4.0",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.1"
   }
 }
