--- a/client/policyengine-core/package.json
+++ b/client/policyengine-core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "policyengine-client",
+  "name": "policyengine-core",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "description": "React component library for PolicyEngine",
   "author": "nikhilwoodruff",
   "license": "MIT",
   "repository": "policyengine/policyengine-core",
