--- a/client/policyengine-core/example/package.json
+++ b/client/policyengine-core/example/package.json
@@ -10,7 +10,7 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
-    "policyengine-client": "file:.."
+    "policyengine-core": "file:.."
   },
   "eslintConfig": {
     "extends": "react-app"
