--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,6 +36,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
+      - name: Install dependencies
+        run: make install
       - name: Build server package
         run: make build-server
       - name: Publish a Python distribution to PyPI
