--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -56,4 +56,4 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          package: client/package.json
+          package: client/policyengine-core/package.json
