Complete all menu-side changes

--- a/policyengine/countries/uk/default_household.yaml
+++ b/policyengine/countries/uk/default_household.yaml
@@ -5,7 +5,4 @@ household:
         adult:
           You: {}
         child: {}
-takenNames:
-  - Your household
-  - Your immediate family
-  - You
+num_entities: 3
