--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
         with:
