--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,12 +23,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
       - name: Install dependencies
         run: make install
       - name: Run the main tests
         run: make test
   publish:
-    name: Publish
+    name: Deploy
     if: github.repository == 'PolicyEngine/policyengine-core'
     runs-on: ubuntu-latest
     steps:
@@ -36,6 +38,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
       - name: Install dependencies
         run: make install
       - name: Build server package
@@ -46,7 +50,7 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI }}
           skip_existing: true
-          packages_dir: server/dist/
+          packages_dir: policyengine/dist/
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -56,4 +60,6 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          package: client/policyengine-core/package.json
+          package: client/package.json
+      - name: Deploy app
+        run: make deploy
