--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,6 +30,8 @@ jobs:
           export_default_credentials: true
       - name: Install dependencies
         run: make install
+      - name: Install datasets
+        run: make datasets
       - name: Run the main tests
         run: make test
       - name: Test deployment
