--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,6 +42,8 @@ jobs:
           python-version: 3.7
       - name: Install dependencies
         run: make install
+      - name: Install datasets
+        run: make datasets
       - name: Build server package
         run: make build-server
       - name: Publish a Python distribution to PyPI
