Fix push action

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           options: ". -l 79 --check"
   test:
-    name: Test
+    name: Test and Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -25,10 +25,20 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: uk-policy-engine
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
       - name: Install dependencies
         run: make install
+      - name: Install datasets
+        run: make datasets
       - name: Run the main tests
         run: make test
+      - name: Deploy
+        run: make deploy
   publish:
     name: Deploy
     if: github.repository == 'PolicyEngine/policyengine'
@@ -52,7 +62,7 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI }}
           skip_existing: true
-          packages_dir: policyengine/dist/
+          packages_dir: dist/
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -62,6 +72,4 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          package: client/package.json
-      - name: Deploy app
-        run: make deploy
+          package: policyengine-client/package.json
