Fix deploy make

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,12 +35,10 @@ jobs:
         run: make install
       - name: Install datasets
         run: make datasets
-      - name: Run the main tests
-        run: make test
       - name: Deploy
         run: make deploy
   publish:
-    name: Deploy
+    name: Publish packages
     if: github.repository == 'PolicyEngine/policyengine'
     runs-on: ubuntu-latest
     steps:
@@ -50,6 +48,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: uk-policy-engine
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Install dependencies
         run: make install
       - name: Install datasets
