--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           project_id: uk-policy-engine
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
       - name: Install dependencies
         run: make install
       - name: Install datasets
