--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "policyengine-client",
-  "version": "0.2.14",
+  "version": "0.2.15",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.5.0",
@@ -17,6 +17,7 @@
     "grommet": "^2.18.0",
     "plotly.js": "^2.5.1",
     "polished": "^4.1.3",
+    "pretty-ms": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
