--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -32,9 +32,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,6 +56,11 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.0",
+    "concurrently": "^6.3.0",
+    "craco-less": "^1.20.0",
+    "less": "^4.1.2",
+    "less-watch-compiler": "^1.16.3",
     "react-styleguidist": "^11.1.7"
   }
 }
