--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pyyaml>=5.3.1
 pytest>=5.4.3
 OpenFisca-Core>=35.4.1
 microdf_python>=0.3.0
-OpenFisca-Tools>=0.1.0<0.2.0
+OpenFisca-Tools>=0.1.6,<0.2.0
 tqdm>=4.59.0
 plotly>=4.14.3
 argparse>=1.4.0
