--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,6 +33,8 @@ jobs:
           export_default_credentials: true
       - name: Install dependencies
         run: make install
+      - name: Build package
+        run: make build
       - name: Deploy
         run: make deploy
   publish:
