--- a/policyengine/countries/uk/reform_parameters.yaml
+++ b/policyengine/countries/uk/reform_parameters.yaml
@@ -5,7 +5,7 @@ reforms:
       values:
         2021-01-01: 0.00
       metadata:
-        label: Land Value Tax
+        label: Land value tax
         name: LVT
         unit: /1
         max: 0.1
@@ -17,7 +17,7 @@ reforms:
       values:
         2021-01-01: 0.00
       metadata:
-        label: Carbon Tax
+        label: Carbon tax
         name: carbon_tax
         max: 200
         unit: currency-GBP
@@ -25,11 +25,11 @@ reforms:
           - decreases_net_income: true
   UBI:
     adult:
-      description: Flat payment given to each person over the adult UBI age threshold, but under State Pension age
+      description: Flat payment given to each person over the adult universal basic income age threshold, but under State Pension age
       values: 
         2021-01-01: 0.00
       metadata:
-        label: Working-age adult UBI
+        label: Working-age adult universal basic income
         name: adult_UBI
         unit: currency-GBP
         period: week
@@ -37,11 +37,11 @@ reforms:
         tests:
           - increases_net_income: true
     child:
-      description: Flat payment given to each person below the adult UBI age threshold
+      description: Flat payment given to each person below the adult universal basic income age threshold
       values: 
         2021-01-01: 0.00
       metadata:
-        label: Child UBI
+        label: Child universal basic income
         name: child_UBI
         unit: currency-GBP
         period: week
@@ -53,7 +53,7 @@ reforms:
       values: 
         2021-01-01: 0.00
       metadata:
-        label: Senior UBI
+        label: Senior universal basic income
         name: senior_UBI
         max: 250
         unit: currency-GBP
@@ -61,27 +61,27 @@ reforms:
         tests:
           - increases_net_income: true
     WA_adult_UBI_age:
-      description: Age at which a person receives the working-age adult UBI payment
+      description: Age at which a person receives the working-age adult universal basic income payment
       values: 
         2021-01-01: 18
       metadata:
-        label: Adult UBI age threshold
+        label: Adult universal basic income age threshold
         name: WA_adult_UBI_age
         unit: year
         max: 65
     taxable:
-      description: Whether the UBI is included in taxable income for Income Tax
+      description: Whether the universal basic income is included in taxable income for Income Tax
       values:
         2021-01-01: false
       metadata:
-        label: UBI taxability
+        label: Universal basic income taxability
         name: taxable_UBI
     in_means_tests:
-      description: Whether the UBI is included in the means tests for benefits
+      description: Whether the universal basic income is included in the means tests for benefits
       values: 
         2021-01-01: false
       metadata:
-        label: UBI included in means tests
+        label: Universal basic income included in means tests
         name: means_test_UBI
   abolition:
     abolish_income_tax:
@@ -111,7 +111,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish UC
+        label: Abolish Universal Credit
         name: abolish_UC
         unit: abolition
         variable: universal_credit
@@ -122,7 +122,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the Child Benefit
+        label: Abolish Child Benefit
         name: abolish_CB
         unit: abolition
         variable: child_benefit
@@ -144,7 +144,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the CTC
+        label: Abolish Child Tax Credit
         name: abolish_CTC
         unit: abolition
         variable: child_tax_credit
@@ -155,7 +155,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish WTC
+        label: Abolish Working Tax Credit
         name: abolish_WTC
         unit: abolition
         variable: working_tax_credit
@@ -166,7 +166,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the State Pension
+        label: Abolish State Pension
         name: abolish_SP
         variable: state_pension
         unit: abolition
@@ -199,18 +199,18 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish income-based JSA
+        label: Abolish income-based Jobseeker's Allowance
         name: abolish_JSA_income
         unit: abolition
         variable: JSA_income
         tests:
           - decreases_net_income: true
     abolish_UC_standard_allowance:
-      description: Abolish the Standard Allowance component of Universal Credit
+      description: Abolish Universal Credit standard allowance
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the UC Standard Allowance
+        label: Abolish Universal Credit standard allowance
         name: abolish_UC_standard
         variable: UC_standard_allowance
         unit: abolition
@@ -221,7 +221,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the UC child element
+        label: Abolish Universal Credit child element
         name: abolish_UC_child
         variable: UC_child_element
         unit: abolition
@@ -232,7 +232,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the UC disability element
+        label: Abolish Universal Credit disability element
         name: abolish_UC_disability
         variable: UC_disability_elements
         unit: abolition
@@ -243,7 +243,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the UC carer element
+        label: Abolish Universal Credit carer element
         unit: abolition
         variable: UC_carer_element
         name: abolish_UC_carer
@@ -254,7 +254,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish the UC childcare element
+        label: Abolish Universal Credit childcare element
         name: abolish_UC_childcare
         variable: UC_childcare_element
         unit: abolition
@@ -265,7 +265,7 @@ reforms:
       values:
         2021-01-01: false
       metadata:
-        label: Abolish income-based ESA
+        label: Abolish income-based Employment Support Allowance
         variable: ESA_income
         name: abolish_ESA_income
         unit: abolition
