--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "ga-4-react": "^0.1.281",
     "grommet": "^2.18.0",
+    "moment": "^2.29.1",
     "plotly.js": "^2.5.1",
     "polished": "^4.1.3",
     "pretty-ms": "^7.0.1",
