--- a/policyengine/countries/uk/reform_parameters.yaml
+++ b/policyengine/countries/uk/reform_parameters.yaml
@@ -20,7 +20,7 @@ reforms:
         tests:
           - decreases_net_income: true
     household_rate:
-      description: Tax rate on the unimproved value of land for households
+      description: Tax rate on the unimproved value of land owned by households
       values:
         2021-01-01: 0.00
       metadata:
@@ -31,7 +31,7 @@ reforms:
         tests:
           - decreases_net_income: true
     corporate_rate:
-      description: Tax rate on the unimproved value of land for corporations
+      description: Tax rate on the unimproved value of land owned by corporations
       values:
         2021-01-01: 0.00
       metadata:
