Add business rates

--- a/policyengine/countries/uk/reform_parameters.yaml
+++ b/policyengine/countries/uk/reform_parameters.yaml
@@ -365,3 +365,11 @@ reforms:
       label: Abolish the Marriage Allowance income condition
       name: abolish_marriage_allowance_income_condition
       unit: abolition
+  abolish_business_rates:
+    values:
+      2021-01-01: false
+    metadata:
+      label: Abolish business rates
+      name: abolish_business_rates
+      unit: abolition
+      variable: business_rates
