Rename to consumer incidence

--- a/policyengine/countries/uk/reform_parameters.yaml
+++ b/policyengine/countries/uk/reform_parameters.yaml
@@ -53,13 +53,13 @@ reforms:
         unit: currency-GBP
         tests:
           - decreases_net_income: true
-    household_incidence:
+    consumer_incidence:
       description: Proportion of corporate carbon taxes which is passed on to consumers in the form of higher prices (as opposed to shareholders in the form of reduced profitability)
       values:
         2021-01-01: 1.00
       metadata:
-        label: Carbon tax household incidence
-        name: carbon_tax_household_incidence
+        label: Carbon tax consumer incidence
+        name: carbon_tax_consumer_incidence
         max: 1
         unit: /1
   wealth_tax:
