--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,6 +52,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Publish a git tag
+        run: ".github/publish-git-tag.sh"
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
