--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
 # dependencies
-policyengine-client/node_modules
-
-# builds
-policyengine-client/build
-policyengine-client/dist
-policyengine-client/.rpt2_cache
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/node_modules
+**/package-lock.json
+**/build
+**/*.log*
+**/dist
+**/pytest_cache
+**/__pycache__
+**/*.egg-info
+**/.vscode
+**/static/*
+openfisca_uk/
+openfisca_uk_data/
